syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__generic_args__tests__it_matches_empty_generic_args.snap
---
source: syn-state-machine/src/common_tokens/generic_args.rs
expression: "crate::parse::<GenericArgs<Infallible>>(::quote::quote! { < > })"
---
Ok(
    (
        GenericArgs(
            [],
        ),
        0,
    ),
)
