syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__generic_args__tests__it_matches_multi_args.snap
---
source: syn-state-machine/src/common_tokens/generic_args.rs
expression: "crate::parse::<GenericArgs<TypePath<Infallible>>>(::quote::quote! {\n            < 'a, T, hello :: world >\n        })"
---
Ok(
    (
        GenericArgs(
            [
                Lifetime(
                    Lifetime(
                        Ident(
                            a,
                        ),
                    ),
                ),
                Type(
                    TypePath {
                        leading: false,
                        segments: [
                            Simple {
                                id: Id(
                                    Ident(
                                        T,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
                Type(
                    TypePath {
                        leading: false,
                        segments: [
                            Simple {
                                id: Id(
                                    Ident(
                                        hello,
                                    ),
                                ),
                            },
                            Simple {
                                id: Id(
                                    Ident(
                                        world,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ],
        ),
        0,
    ),
)
